--- a/trunk/CardAcountBook/res/layout/main.xml
+++ b/trunk/CardAcountBook/res/layout/main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/from_date_view"
@@ -51,12 +51,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="400dp"
+        android:layout_width="290dp"
         android:layout_height="100dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/current_pay_background"
         android:orientation="vertical" >
 
@@ -67,8 +67,8 @@
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
             android:text="@string/today_payment"
-            android:textSize="20dp"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/today_payment"
@@ -79,120 +79,41 @@
             android:textColor="@color/black"
             android:textSize="30dp" />
     </LinearLayout>
-    <!--
-    <TableRow>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp" 
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp">
 
         <ImageView
             android:id="@+id/my_card_btn"
-            style="@style/MainText"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="2dp"
             android:layout_weight="1"
             android:src="@drawable/my_card" />
 
         <ImageView
             android:id="@+id/breakdown_stats_btn"
-            style="@style/MainText"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginBottom="11dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
             android:layout_weight="1"
             android:src="@drawable/icon_graph" />
 
         <ImageView
             android:id="@+id/detail_view_btn"
-            style="@style/MainText"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginBottom="11dp"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="15dp"
             android:layout_weight="1"
             android:src="@drawable/icon_detail" />
-    </TableRow>
+    </LinearLayout>
 
-    <TableRow>
-
-        <ImageView
-            android:id="@+id/cash_btn"
-            style="@style/MainText"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginTop="22dp"
-            android:layout_weight="1"
-            android:src="@drawable/icon_cash" />
-
-        <ImageView
-            android:id="@+id/notice_btn"
-            style="@style/MainText"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:layout_marginTop="22dp"
-            android:layout_weight="1"
-            android:src="@drawable/icon_notice" />
-
-        <ImageView
-            android:id="@+id/option_btn"
-            style="@style/MainText"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="22dp"
-            android:layout_weight="1"
-            android:src="@drawable/icon_option" />
-    </TableRow>
-    -->
-
-    <TableRow>
-
-        <ImageView
-            android:id="@+id/my_card_btn"
-            style="@style/MainText"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="2dp"
-            android:layout_weight="1"
-            android:src="@drawable/my_card" />
-
-        <ImageView
-            android:id="@+id/breakdown_stats_btn"
-            style="@style/MainText"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="11dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:layout_weight="1"
-            android:src="@drawable/icon_graph" />
-
-        <ImageView
-            android:id="@+id/detail_view_btn"
-            style="@style/MainText"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="11dp"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="15dp"
-            android:layout_weight="1"
-            android:src="@drawable/icon_detail" />
-    </TableRow>
-
-    <TableRow>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/notice_btn"
@@ -217,6 +138,6 @@
             android:layout_marginTop="22dp"
             android:layout_weight="1"
             android:src="@drawable/icon_option" />
-    </TableRow>
+    </LinearLayout>
 
-</TableLayout>
+</LinearLayout>
