--- a/trunk/CardAcountBook/res/layout/my_card_add_card_list_layout.xml
+++ b/trunk/CardAcountBook/res/layout/my_card_add_card_list_layout.xml
@@ -8,21 +8,22 @@
     android:paddingRight="10dp" >
 
     <ImageView
-        android:id="@+id/card_imageview"
+        android:id="@+id/card_add_image"
         android:layout_width="80dp"
         android:layout_height="60dp"
         android:padding="3dp"
         android:src="@drawable/nh_chaum" />
 
     <TextView
-        android:id="@+id/card_name_textview"
+        android:id="@+id/card_add_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:gravity="center_vertical"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingTop="5dp"
-        android:textColor="@color/white"
         android:text="@string/NH_card"
+        android:textColor="@color/white"
         android:textSize="20dp" />
 
 </LinearLayout>
