--- a/trunk/CardAcountBook/res/values/company_name_number.xml
+++ b/trunk/CardAcountBook/res/values/company_name_number.xml
@@ -5,6 +5,7 @@
     <string name="phoneNum_KB">15881788</string>
 
     <string name="NH_card">NH카드</string>
+    <string name="KB_card">KB국민</string>
     <string name="KB_check">KB국민체크</string>
     <string name="KB_credit">KB국민카드</string>
     	
