--- a/trunk/CardAcountBook/res/layout/my_card.xml
+++ b/trunk/CardAcountBook/res/layout/my_card.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
-        android:longClickable="true" >
-    </ListView>
+        android:longClickable="true"
+        android:layoutAnimation="@anim/anim_layout_controller"
+        android:persistentDrawingCache="animation|scrolling" />
 
 </LinearLayout>
