--- a/trunk/CardAcountBook/res/layout/option_view.xml
+++ b/trunk/CardAcountBook/res/layout/option_view.xml
@@ -3,16 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/card_ace"
-    android:orientation="vertical" >
-    
-	<Button android:id="@+id/password"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="비밀번호 설정"/>
-	
-	<Button android:id="@+id/csv"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="csv"/>
-	
+    android:orientation="vertical"
+    android:id="@+id/layout_root" >
+
+    <Button
+        android:id="@+id/password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비밀번호 설정" />
+
+    <Button
+        android:id="@+id/csv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="csv" />
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_marginRight="10dp" />
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:textColor="#FFF" />
+
 </LinearLayout>
