--- a/trunk/CardAcountBook/res/layout/option_view.xml
+++ b/trunk/CardAcountBook/res/layout/option_view.xml
@@ -2,32 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/card_ace"
-    android:orientation="vertical"
-    android:id="@+id/layout_root" >
+    android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="비밀번호 설정" />
+    <ListView
+        android:id="@+id/android:list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:cacheColorHint="#00000000" />
 
-    <Button
-        android:id="@+id/csv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="csv" />
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_marginRight="10dp" />
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:textColor="#FFF" />
 
 </LinearLayout>
