--- a/CardAcountBook/res/values/style.xml
+++ b/CardAcountBook/res/values/style.xml
@@ -31,4 +31,15 @@
         <item name="android:gravity">left</item>
     </style>
 
+    <style name="OptionTitleText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+    
+    <style name="OptionDescriptionText">
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+        
+    
 </resources>
