--- a/trunk/CardAcountBook/res/layout/category_graph_view.xml
+++ b/trunk/CardAcountBook/res/layout/category_graph_view.xml
@@ -3,8 +3,7 @@
     android:id="@+id/pie_graph_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/other_background" >
-    
+    android:background="@drawable/other_background"
+    android:orientation="vertical" >
 
 </LinearLayout>
