--- a/trunk/CardAcountBook/res/layout/password_dialog_layout.xml
+++ b/trunk/CardAcountBook/res/layout/password_dialog_layout.xml
@@ -12,20 +12,7 @@
         android:textSize="15sp" />
 
     <EditText
-        android:id="@+id/editname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="전화번호"
-        android:textSize="15sp" />
-
-    <EditText
-        android:id="@+id/edittel"
+        android:id="@+id/Pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword" />
@@ -37,7 +24,9 @@
         android:text="비밀번호 확인"
         android:textSize="15sp" />
 
-
-    <requestFocus />
-
+    <EditText
+        android:id="@+id/commitPass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword" />
 </LinearLayout>
