--- a/trunk/CardAcountBook/res/values/company_name_number.xml
+++ b/trunk/CardAcountBook/res/values/company_name_number.xml
@@ -6,6 +6,7 @@
 
     <string name="NH_card">NH카드</string>
     <string name="KB_card">KB국민</string>
+    <string name="Lotte_card">롯데카드</string>
     <string name="KB_check">KB국민체크</string>
     <string name="KB_credit">KB국민카드</string>
     	
